# cs-421-theory-of-computing

./: .gitignore
hw01/: HW1A_formulas.tex  HW1A_intro_w2F.rtf
hw01B/: CMakeLists.txt  Doxyfile.in  Goutput.txt  HW1B_recog-gen-PROG_w3F.rtf  Routput.txt  report.md
hw01B/app/: generator.cpp  main.cpp  recognizer.cpp
hw01B/include/: binary_recognizer.h  generator_util.hpp
hw01B/src/: binary_recognizer.cpp
hw02A/: CMakeLists.txt  Doxyfile.in  Test1.txt  mat.cpp  report.md
hw02A/HW2A_Matrix/: @instructions  mat.cpp
hw02B/: CMakeLists.txt  Doxyfile.in  Test1.txt  Test2.txt  fa.cpp  fa_ident.puml  fa_int.puml  fa_real.puml  report.md  td.cpp
hw02B/HW2B_Scanners/Prog1/: fa.cpp
hw03A/: CMakeLists.txt  Doxyfile.in  report.md
hw03A/app/: CMakeLists.txt  ll1.cpp
hw03A/lib/: CMakeLists.txt
hw03A/lib/include/: shape.hpp  tmp.hpp
